loadtest-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loadtest-app
  name: loadtest-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadtest-app
  template:
    metadata:
      labels:
        app: loadtest-app
    spec:
      containers:
      - image: chankx/demo-loadtest-app
        livenessProbe:
          httpGet:
            path: /hello
            port: 3000
          initialDelaySeconds: 3
        name: loadtest-app
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /hello
            port: 3000
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
