loadtest-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loadtest-app
  name: loadtest-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: loadtest-app
