loadtest-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loadtest-app
spec:
  ingressClassName: nginx
  rules:
  - host: loadtest-app.odd.works
    http:
      paths:
      - backend:
          service:
            name: loadtest-app
            port:
              name: http
        path: /
        pathType: Prefix
